const_typed_builder_test/compile_fail/group_multiple_member_1.stderr
error[E0599]: no method named `build` found for struct `FooBuilder<true, true>` in the current scope
  --> ./compile_fail/group_multiple_member_1.rs:12:88
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
12 |     _ = Foo::builder().bar("Hello world!".to_string()).qux("Hello world!".to_string()).build();
   |                                                                                        ^^^^^ method not found in `FooBuilder<true, true>`
   |
   = note: the method was found for
           - `FooBuilder<true, false>`
           - `FooBuilder<false, true>`
